# simple

./: .gitignore  CMakeLists.txt  LICENSE.txt  simple.cpp
include/simple/AST/: AST.h
include/simple/Basic/: Diagnostic.def  Diagnostic.h  LLVM.h  Name.h  TokenKinds.def  TokenKinds.h
include/simple/Driver/: Driver.h
include/simple/Lexer/: Lexer.h  Token.h  TokenStream.h
include/simple/Parser/: Parser.h
lib/Basic/: Diagnostic.cpp  TokenKinds.cpp
lib/CodeGen/: Decls.cpp  Exprs.cpp  Stmts.cpp  Types.cpp
lib/Driver/: Driver.cpp
lib/Lexer/: Lexer.cpp  Name.cpp  TokenStream.cpp
lib/Parser/: Parser.cpp
lib/Sema/: Decls.cpp  Exprs.cpp  Stmts.cpp  Types.cpp
tests/: aggregates.txt  arrays.txt  ctors_dtor.txt  functions.txt  layouts.txt  operators.txt  pointers.txt  strings.txt  unwind.txt  vcalls.txt
